// Copyright (c) Abstract Machines
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package auth.v1;
option go_package = "github.com/absmach/supermq/api/grpc/auth/v1";

// AuthService is a service that provides authentication
// and authorization functionalities for SuperMQ services.
service AuthService {
  rpc Authorize(PolicyReq) returns (AuthZRes) {}
  rpc Authenticate(AuthNReq) returns (AuthNRes) {}
}


message AuthNReq {
  string token = 1;
}

message AuthNRes {
  string id = 1;
  string user_id = 2;
  uint32 user_role = 3;
  bool verified = 4;
}

message PolicyReq {
  string domain = 1;
  string subject_type = 2;
  string subject_kind = 3;
  string subject_relation = 4;
  string subject = 5;
  string relation = 6;
  string permission = 7;
  string object = 8;
  string object_type = 9;
  string pat_id = 10;
  string operation = 11;
  string user_id = 12;
  string entity_id = 13;
  string entity_type = 14;
}

message AuthZRes {
  bool authorized = 1;
  string id = 2;
}
